# px4_autonomy

./: CMakeLists.txt  package.xml
cfg/: settings.yaml
docs/: .~lock.Gazobo UAV Depth Cam.odt#  .~lock.simulation.odt#  Gazobo UAV Depth Cam.odt  simulation.odt
launch/: project_3.launch  px4_autonomy.launch  px4_simulation.launch~  px4_test.launch
msg/: Position.msg  Position.msg~  Takeoff.msg  Velocity.msg
src/: offboard_center.cpp  offboard_center.cpp.save  ps2.cpp  takeoff_test.cpp  test.cpp
